--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,117 @@
-.App {
+body {
   text-align: center;
+  background-image: url('3d-hyperspace-background-with-warp-tunnel-effect.jpg');
+  color: white;
+  background-size: cover;
+  font-size: xx-large;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+}
+
+
+h2 {
+  padding: 30px;
+  width: 81%;
+  border: 5px solid white;
+  border-radius: 10px;
+}
+
+.planets {
+  display: flex;
+  justify-content: space-around;
+}
+
+.planet-card {
+  margin: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.image {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.Mercúrio, .Vênus, .Marte, .Terra, .Júpiter, .Saturno, .Urano, .Netuno {
+  transition: .8s;
+}
+
+.Mercúrio:hover, .Vênus:hover, .Marte:hover, .Terra:hover, .Júpiter:hover, .Saturno:hover, .Urano:hover, .Netuno:hover  {
+  width: 10em;
+}
+
+img {
+  margin: auto;
+}
+
+.mission-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: left;
+  gap: 30px;
+}
+
+.Mission:hover {
+  background-color: rgb(59, 58, 57, 0.7);
+}
+
+.Mission {
+  width: 400px;
+  border: 5px solid rgba(248, 248, 248, 0.774);
+  border-radius: 10px;
+  text-align: center;
+}
+
+.mission-name {
+  font-weight: 1000;
+  border-bottom: 5px solid white;
+  padding: 5px;
+}
+
+footer img {
+  margin-top: 50px;
+}
+
+.Mercúrio {
+	width: 50%;
+}
+
+.Vênus {
+  width: 65%;
+}
+
+.Terra {
+  width: 87%;
+ 
+}
+
+.Marte {
+  width: 55%;
+}
+
+.Júpiter {
+  width: 200%;
+}
+
+.Saturno {
+  width: 180%;
+}
+
+.Urano {
+  width: 120%;
+}
+
+.Netuno {
+  width: 100%;
 }
